# c-step-back

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  toolchain.cmake
src/: CMakeLists.txt  camera.c  camera.h  canvas.c  canvas.h  components.c  components.h  draw_context.c  draw_context.h  drawer.c  drawer.h  input.c  input.h  main.c  renderer.c  renderer.h  sdl_app.c  sdl_app.h  stack.h  utils.h
src/graphics/: drawer.c  drawer.h  rasterizer.c  rasterizer.h  renderer.c  renderer.h
